samples/_failures_safe/1761354619_fc7e3a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9628e126.c: In function ‘main’:
./samples/SAFE/__tmp_9628e126.c:157:5: error: expected expression at end of input
  157 |     if (choice ==
      |     ^~
./samples/SAFE/__tmp_9628e126.c:157:5: error: expected declaration or statement at end of input
